jfrog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: artifactory
    meta.helm.sh/release-namespace: jfrog
  creationTimestamp: "2024-07-16T09:17:04Z"
  generation: 1
  labels:
    app: artifactory
    app.kubernetes.io/managed-by: Helm
    chart: artifactory-107.84.17
    heritage: Helm
    release: artifactory
  name: artifactory
  namespace: jfrog
  resourceVersion: "7466368"
  uid: 996e2e91-0dad-4c42-bfe4-75d860742110
spec:
  defaultBackend:
    service:
      name: artifactory
      port:
        number: 8082
  ingressClassName: nginx
  rules:
  - host: ucdevops.exlservice.com
    http:
      paths:
      - backend:
          service:
            name: artifactory
            port:
              number: 8082
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: artifactory
            port:
              number: 8081
        path: /artifactory/
        pathType: ImplementationSpecific
